<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cv_camera</name>
  <version>0.3.1</version>
  <description>cv_camera uses OpenCV capture object to capture camera image.
  This supports camera_image and nodelet.
  </description>
  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/cv_camera</url>
  <author email="t.ogura@gmail.com">Takashi Ogura</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- For using ROS2 custom messages -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <exec_depend>message_filters</exec_depend>
  <build_depend>image_transport</build_depend>
  <exec_depend>image_transport</exec_depend>
  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>
  <build_depend>camera_info_manager</build_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>utils</depend>
  <depend>diagnostic_msgs</depend>

  <!-- For using ROS2 custom messages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
